packages/hyperchad/template/tests/warnings/attribute-missing-value.stderr
error: Failed to parse container! template.

       Error: unexpected end of input, expected one of: curly braces, literal, parentheses, `@`, `;`, integer literal, floating point literal, `#`, identifier

       Common issues:
       - Element names must be lowercase (div, button, etc.)
       - Check attribute formatting: key="value" or key=(expression)
       - Ensure braces {} are balanced
       - Control flow needs @ prefix: @if, @for, @match
       - Variables need @let: @let name = value;
       - Check for missing semicolons after Input elements
 --> tests/warnings/attribute-missing-value.rs:4:5
  |
4 | /     container! {
5 | |         div href=
6 | |     };
  | |_____^
  |
  = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)
