packages/hyperchad/template/tests/warnings/attribute-missing-value.rs
use hyperchad_template::container;

fn main() {
    container! {
        div href=
    };
}
